src/components/AlphaTabPlayground/styles.module.scss
/* ... */
.video {
    position: absolute;
    right: 1rem;
    bottom: 1rem;
    border: 1px solid #d9d9d9;
    width: 480px;
    aspect-ratio: 16/9;
    background: white;
    z-index: 1002;
    border-radius: var(--ifm-alert-border-radius);
    box-shadow: var(--ifm-global-shadow-md) !important;
    padding: 0.5rem;
}

.sync-area-marker-wrap {
    position: absolute;
    top: 0;

    &>.masterbar-marker {
        position: absolute;
        width: 20px;
        top: 0;
        bottom: 20px;
        transform: translateX(-50%);
        user-select: none;

        display: flex;
        flex-direction: column;
        align-items: center;
        font-size: 12px;

        opacity: 0.4;

        &:hover {
            opacity: 1;
        }


        &>.marker-label {
            height: 20px;
            white-space: nowrap;
            display: flex;
            align-items: center;
        }


        &>.marker-head {
            height: 20px;
            width: 20px;
            display: grid;
            align-items: center;
            grid-template-columns: 1fr;
            grid-template-rows: 1fr;

            &>* {
                grid-area: 1 / 1 / 2 / 2;
            }

            &>.marker-arrow {
                width: 20px;
                height: 20px;
                clip-path: polygon(0 0, 100% 0, 50% 100%);
                background: #444950;
            }

            &>.marker-tempo {
                white-space: nowrap;
                text-align: left;
                transform: translateX(25px);
                pointer-events: none;
            }
        }

        &>.marker-line {
            flex-grow: 1;
            width: 0;
            border-right: 1px solid #444950;
        }

        &.masterbar-marker-startmarker,
        &.masterbar-marker-endmarker {
            &>.marker-line {
                border-right-style: solid;
                border-right-width: 2px;
            }
        }

        &.masterbar-marker-masterbar {
            &>.marker-line {
                border-right-style: solid;
            }
        }

        &.masterbar-marker-intermediate {
            &>.marker-line {
                border-right-style: dashed;
            }
        }


        cursor: col-resize;

        &.has-sync-point {
            opacity: 0.75;

            &:hover {
                opacity: 1;
            }

            & .marker-arrow {
                background: #4972a1;
            }
        }
    }
}

.modal {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: rgba(0, 0, 0, 0.5);
    z-index: 1010;
    display: flex;
    justify-content: center;
    align-items: center;

    & .modal-body {
        background: #FFF;
        box-shadow: var(--ifm-global-shadow-md) !important;
        padding: 1rem;
        border-radius: var(--ifm-alert-border-radius);
        width: 30vw;
        max-height: 80vh;
        overflow: auto;

        & label {
            font-weight: bold;
            display: block;
        }

        & input[type=text] {
            display: block;
            appearance: none;
            background: var(--ifm-navbar-search-input-background-color);
            border: none;
            border-radius: 2rem;
            color: var(--ifm-navbar-search-input-color);
            cursor: text;
            font-size: 1rem;
            height: 2rem;
            padding: 0 0.5rem;
            margin: 0.5rem 0;
            width: 100%;
        }

        & .modal-actions {
            display: flex;
            justify-content: space-between;
            align-items: center;
        }
    }

    &.modal-sm .modal-body {
        width: 30vw;
    }

    &.modal-lg .modal-body {
        width: 70vw;
    }
}

